--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.content {
+  padding-top: 65px;
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
